--- a/index.html
+++ b/index.html
@@ -5,38 +5,67 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FakeStore</title>
+  <title>Matchless Gifts</title>
+
+  <!-- Custom CSS Link -->
   <link rel="stylesheet" href="./css/style.css" />
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+
+  <!-- Latest compiled and minified CSS (Bootstrap Link) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
 
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+
+  <link rel="shortcut icon" href="images/matchlessgifts-icon.png" type="image/png">
 </head>
 
-<body>
-  <header></header>
-  <main class="main">
-    <div class="search-field">
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
+<body class="body-bg">
+  <!-- Header -->
+  <header>
+    <!-- website title name -->
+    <section class="container w-50 mx-auto mt-5 p-5 d-flex justify-content-center">
+      <h1 class="fs-1 margin-left" id="title">Matchless <span class="fs-1 ms-4" id="title2">Gifts</span></h1>
+    </section>
+  </header>
+
+  <!-- Main -->
+  <main class="container">
+    <!-- search option -->
+    <section class="w-50 mx-auto container pt-5">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Search your products" aria-label="Recipient's username"
+          aria-describedby="button-addon2">
+        <button class="btn btn-outline-secondary bg-warning" type="button" id="button-addon2"
+          onclick="loadProducts()">Search</button>
       </div>
-    </div>
+    </section>
+    <br>
+    <br>
+    <!-- product details -->
+    <section class="container">
+
+      <div class="row">
+        <div class="col-md-7 col-lg-7 col-sm-7">
+          <div id="product-details" class="">
+
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <!-- products cart -->
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
-          <h1></h1>
         </div>
       </div>
-      <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
-        <div class="cart" id="my-cart">
+      <!-- price cart -->
+      <div class="col-md-3 col-lg-3 col-sm-5 cart-main float-end">
+        <div class="cart sticky-top" id="my-cart">
           <table class="table">
             <thead>
               <h1>My-Cart</h1>
@@ -50,7 +79,7 @@
             <tbody>
               <tr>
                 <th>Total Added-Products:</th>
-                <td>$ <span id="total-Products">0</span></td>
+                <td><span id="total-Products">0</span></td>
                 <td></td>
                 <td></td>
               </tr>
@@ -73,22 +102,30 @@
                 <td></td>
               </tr>
               <tr>
-                <th scope="row">Total</th>
+                <th scope="row" class="text-danger">Total</th>
                 <td colspan="2">$ <span id="total">0</span></td>
                 <td></td>
               </tr>
             </tbody>
           </table>
           <div class="parces text-center">
-            <button class="btn btn-primary text-center">Buy Now</button>
+            <button class="btn btn-success text-center">Buy Now</button>
           </div>
         </div>
       </div>
     </div>
   </main>
-  <footer></footer>
 
-  <!-- add javascript  file  -->
+  <!-- Footer -->
+  <footer>
+    <section class="container w-50 mx-auto mt-5 ">
+      <div class="w-100 mx-auto p-5 mb-5 d-flex justify-content-center">
+        <p>&copy; All Copyrights reserved by Matchless Gifts</p>
+      </div>
+    </section>
+  </footer>
+
+  <!-- JavaScript file Link -->
   <script src="./js/app.js"></script>
 </body>
 
